kustomize/env/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-frontend
  labels:
    app: httpd-frontend
spec:
  selector:
    matchLabels:
      app: httpd-frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: httpd-frontend
    spec:
      containers:
        - image: ghcr.io/rhobs/prometheus-example-app:0.4.1
          imagePullPolicy: Always
          name: httpd-rhel7
          ports:
            - containerPort: 8080
              name: http-port
            - containerPort: 8443
              name: https-port
