kustomize/env/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-frontend
  labels:
    app: httpd-frontend
spec:
  to:
    kind: Service
    name: httpd-frontend
    weight: 100
  port:
    targetPort: http-port
  tls:
    termination: edge
  wildcardPolicy: None
